# OddsHarvester

./: .gitignore  CODE_OF_CONDUCT.md  Dockerfile  FEAT-001-consistent-all-parameter-framework.txt  README.md  pyproject.toml  pytest.ini  serverless.yaml  uv.json
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: run_unit_tests.yml  scraper_health_check.yml
src/: lambda_handler.py  main.py
src/cli/: __init__.py  cli_argument_handler.py  cli_argument_parser.py  cli_argument_validator.py  cli_help_message_generator.py
src/core/: base_scraper.py  browser_helper.py  odds_portal_market_extractor.py  odds_portal_scraper.py  odds_portal_selectors.py  playwright_manager.py  scraper_app.py  sport_market_registry.py  url_builder.py
src/core/market_extraction/: __init__.py  market_grouping.py  navigation_manager.py  odds_history_extractor.py  odds_parser.py  submarket_extractor.py
src/storage/: local_data_storage.py  remote_data_storage.py  storage_format.py  storage_manager.py  storage_type.py
src/utils/: change_detection_service.py  command_enum.py  constants.py  date_utils.py  match_fingerprint.py  odds_format_enum.py  proxy_manager.py  setup_logging.py  sport_league_constants.py  sport_market_constants.py  utils.py
tests/: test_website_config.py  test_website_layout.py
tests/cli/: test_cli_argument_handler.py  test_cli_argument_parser.py  test_cli_argument_validator.py  test_cli_validation_integration.py
tests/core/: test_base_scraper.py  test_browser_helper.py  test_enhanced_error_handling.py  test_market_grouping.py  test_navigation_manager.py  test_odds_history_extractor.py  test_odds_parser.py  test_odds_portal_market_extractor.py  test_odds_portal_scraper.py  test_scraper_app.py  test_scraper_app_dynamic_discovery.py  test_sport_market_registry.py  test_submarket_extractor.py  test_universal_market_auto_discovery.py  test_url_builder.py  test_url_builder_dynamic_discovery.py
tests/integration/: test_aussie_rules_integration.py  test_duplicate_detection_integration.py  test_universal_auto_discovery_integration.py
tests/storage/: test_local_data_storage.py  test_remote_data_storage.py  test_storage_manager.py  test_storage_type.py
tests/utils/: test_change_detection_service.py  test_date_utils.py  test_match_fingerprint.py  test_odds_format_enum.py  test_proxy_manager.py  test_sport_market_constants.py  test_utils.py
